--- a/src/components/HeroContent/hero-content.scss
+++ b/src/components/HeroContent/hero-content.scss
@@ -47,7 +47,7 @@
 
 @media all and (max-width: 760px) {
 	.hero__content{
-		padding: 25px 0;
+		padding: 50px 0 15px 0;
 		position: static;
 		max-width: 100%;
 		.row{
