--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -84,7 +84,7 @@ footer{
 
 @media all and (max-width: 760px) {
 	footer{
-		padding-top: 30px;
+		padding: 50px 0;
 		.footer__menu{
 			.row{
 				display: block;
@@ -94,6 +94,10 @@ footer{
 				text-align: left;
 			}
 			.footer__menu-contacts{
+				width: 100%;
+			}
+			.footer__menu-courses .menu-courses__main {
+				grid-template-columns: 1fr;
 				width: 100%;
 			}
 		}
@@ -137,9 +141,3 @@ footer{
 	}
 }
 
-@media all and (max-width: 424px) {
-	footer .footer__menu .footer__menu-courses .menu-courses__main {
-			grid-template-columns: 1fr;
-			width: 100%;
-	}
-}
