--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -130,6 +130,7 @@ header{
 			display: block;
 			li{
 				margin-bottom: 20px;
+				font-size: 18px;
 			}
 			}
 		nav{
@@ -159,7 +160,7 @@ header{
 		}
 
 		.dropdown:hover{
-			height: 335px;
+			height: 470px;
 		}
 
 		.dropdown__content{
