--- a/src/components/CoursesCarousel/courses-carousel.scss
+++ b/src/components/CoursesCarousel/courses-carousel.scss
@@ -41,13 +41,17 @@
 			a{
 				display: block;
 				width: 100%;
-				border:1px solid #0134EB;
+				border:1px solid #EBA801;
 				text-align: center;
 				padding: 10px 0;
 				font-size: 16px;
 				border-radius: 10px;
 				color: black;
 				box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.395);
+			}
+			a:hover{
+				color: white;
+				background-color: #EBA801;
 			}
 		}
 	}
