--- a/src/components/Advantages/advantages.scss
+++ b/src/components/Advantages/advantages.scss
@@ -26,7 +26,11 @@
 		max-width: 50%;
 		height: 380px;
 		background-color: black;
-		overflow: hidden;
+		img{
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
 	}
 
 	.advantages__item-main{
@@ -71,10 +75,6 @@
 		.advantages__item-img{
 			background: none;
 			height: auto;
-			img{
-				width: 100%;
-				height: auto;
-			}
 		}
 	}
 }
