--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,6 +1,6 @@
 header{
 	color: white;
-	padding: 20px 0 10px 0;
+	padding: 10px 0 10px 0;
 	position: absolute;
 	right: 0;
 	top: 0;
@@ -17,13 +17,12 @@ header{
 			text-transform: uppercase;
 			font-weight: 600;
 			position: relative;
-			padding-bottom: 15px;
 		}
 		li::after{
 			transition: all 0.5s ease;
 			content: "";
 			position: absolute;
-			bottom: 5px;
+			bottom: -5px;
 			display: block;
 			width: 0;
 			height: 2px;
@@ -48,17 +47,20 @@ header{
 		visibility: visible;
 		opacity: 1;
 	}
+	.dropdown__content-back{
+		background-color: rgb(255, 255, 255);
+		padding: 10px 20px 10px 20px;
+		border-radius: 0 10px 10px 10px;
+	}
 	
 	.dropdown__content{
 		transition: all 0.3s ease;
 		visibility: hidden;
-		padding: 10px 20px;
 		width: 250px;
-		background-color: white;
+		padding-top: 20px;
 		position: absolute;
 		opacity: 0;
-		top: 35px;
-		border-radius: 0 10px 10px 10px;
+		top: 20px;
 		a{
 			color: rgb(99, 99, 99);
 			display: block;
@@ -161,6 +163,10 @@ header{
 
 		.dropdown:hover{
 			height: 470px;
+		}
+		.dropdown__content-back{
+			padding-top: 0;
+			background-color: rgba(255, 255, 255, 0);
 		}
 
 		.dropdown__content{
