Add Course component

--- a/src/components/ContactsPage/contacts-page.scss
+++ b/src/components/ContactsPage/contacts-page.scss
@@ -49,6 +49,7 @@ section.contacts{
 		box-shadow: 1px 1px 4px rgb(210, 210, 210);
 		margin-top: 60px;
 		border-radius: 20px;
+		color: black;
 	}
 
 	.contacts__adress{
