--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -137,7 +137,7 @@ header{
 			}
 		nav{
 			background-color: #EBA801;
-			position: fixed;
+			position: absolute;
 			top: 0;
 			height: 100vh;
 			max-width: 320px;
